# claude-usage-optimization

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  garnix.yaml  install.sh  release.toml
.claude/skills/claude-usage-db/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/claude-code-transcripts/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/claude-code-transcripts-ingest/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml
crates/claude-code-transcripts-ingest/src/: cli.rs  info.rs  lib.rs  main.rs  parse.rs  pricing.rs  run.rs  schema.rs  serve.rs  update.rs  version_check.rs
crates/claude-code-transcripts-ingest/tests/: last_prompt_format.rs
crates/claude-code-transcripts-ingest/tests/fixtures/: last_prompt_formats.jsonl
crates/claude-code-transcripts-ingest/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/claude-code-transcripts-ingest/web/src/: App.tsx  main.tsx
crates/claude-code-transcripts-ingest/web/src/api/: sessions.ts
crates/claude-code-transcripts-ingest/web/src/components/: MultiSelectPicker.css  MultiSelectPicker.tsx  Timeline.css  Timeline.tsx
crates/claude-code-transcripts-ingest/web/src/legacy/: App.tsx
crates/claude-code-transcripts-ingest/web/src/routes/: DashboardPage.tsx  Layout.tsx  SessionListPage.css  SessionListPage.tsx  TranscriptPage.tsx
crates/claude-code-transcripts-ingest/web/src/styles/: global.css
crates/claude-code-transcripts/examples/: check_all.rs  check_one.rs
crates/claude-code-transcripts/src/: lib.rs  types.rs
docs/specs/: 2026-05-02-last-prompt-leaf-uuid-design.md
docs/superpowers/specs/: 2026-04-15-dashboards-design.md  2026-04-15-duckdb-website-design.md  2026-04-15-transcript-ingest-duckdb-design.md  2026-04-16-ui-polish-design.md
nix/: garnix.nix
scripts/demo/: build.sh
skills/claude-usage-db/: SKILL.md
skills/optimize-usage/: SKILL.md
skills/optimize-usage/references/: archetypes.md  behavior-vocabulary.md  exemplar.md  failure-modes.md  probes.md
src/: lib.rs  main.rs  types.rs
src/ingest/: cli.rs  mod.rs  parse.rs  pricing.rs  run.rs  schema.rs
web/: index.html
