[workspace]
resolver = "2"
members = [
    "crates/claude-code-transcripts",
    "crates/claude-code-transcripts-ingest",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alfredo V. Clemente <aemente91@gmail.com>"]
repository = "https://github.com/alfredvc/claude-usage-optimization"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
perf = "warn"
suspicious = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rayon = "1"
clap = { version = "4", features = ["derive"] }
duckdb = { version = "1", features = ["bundled"] }
crossbeam-channel = "0.5"
toml = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
include_dir = "0.7"
mime_guess = "2"
lru = "0.12"
bytes = "1"
